更新学生管理

--- a/wisdomCampus/css/utils/pullToRefresh.css
+++ b/wisdomCampus/css/utils/pullToRefresh.css
@@ -60,7 +60,7 @@ body {
 
 .mui-pull-bottom-tips {
 	text-align: center;
-	background-color: #efeff4;
+	background-color: white;
 	font-size: 15px;
 	line-height: 40px;
 	color: #777;
